--- a/apps/web/src/global.css
+++ b/apps/web/src/global.css
@@ -26,6 +26,8 @@ body {
   background-size: cover !important;
   background-position: center !important;
   background-repeat: no-repeat !important;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 .text-wrap-pretty {
